--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-remove-scroll-bar": "^2.3.8",
     "react-router-dom": "^6.30.0",
     "sass": "^1.85.1"
   },
