--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^19.0.0",
     "react-remove-scroll-bar": "^2.3.8",
     "react-router-dom": "^6.30.0",
-    "sass": "^1.85.1"
+    "sass": "^1.85.1",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
